--- a/index.html
+++ b/index.html
@@ -4,30 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
 <body>
-    <script>
-
-    //  var dw=5;
-
-    //  do
-    //  {
-    //     document.write(dw + "<br>");
-    //     dw++;
-    //  }
-    //  while (dw<=19);
-
-    var num = 11;
-
-    var a = 1;
-
-    for (; a<=10 ; a++){
-        document.write( num + " x " + a + " = " + num * a + "<br>")
-    }
-
-
-
-    </script>
+   <h1>Hamza Yousuf</h1>
+   <p>Frontend Web Developer | Graphics Designer | Social Media Optimization Expert | Ui Designer | Video Editor</p>
+   
 </body>
 </html>
